# must-oc

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml
.agents/: ARCHITECT.md  CYNEFIN.md  ENGINEER.md  KISS.md  LEAD.md  PERSONALITY.md  PROMPTS.md  QUALITY.md  SECURITY.md
.claude/: settings.json
.claude/commands/: architect.md  diagnose.md  engineer.md  lead.md  review.md  sdlc.md  security.md
.claude/hooks/: check-dangerous-commands.py  require-uv-run.py
.gemini/commands/: architect.toml  diagnose.toml  engineer.toml  lead.toml  review.toml  sdlc.toml  security.toml
.opencode/commands/: architect.md  diagnose.md  engineer.md  lead.md  review.md  sdlc.md  security.md
config/: cluster_scoped.yaml  irregular_plurals.yaml  resource_map.yaml
must_oc/: __main__.py
must_oc/oc/: describe.py  get.py  logs.py  update_types.py
tests/: conftest.py  constants.py  utils.py
tests/config/: test_config_files.py
tests/must_oc/: test_describe.py  test_get.py  test_logs.py  test_update_types.py
tests/utilities/: test_format.py  test_labels.py  test_paths.py  test_types.py  test_yaml_parser.py
utilities/: format.py  labels.py  paths.py  types.py  yaml_parser.py
